Fix container margin overflowing

--- a/src/style/component/container.scss
+++ b/src/style/component/container.scss
@@ -11,11 +11,14 @@
     min-height: 100%;
     height: 100%;
     & > .content {
-      height: 100%;
-      min-height: 100%;
+      position: absolute;
+      top: $header-height + $content-padding-top;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
     @media screen and (min-width: $tablet-size) {
-      padding-left: $sidebar-space;
+      margin-left: $sidebar-space;
     }
   }
 }
