--- a/src/style/component/roomItem.scss
+++ b/src/style/component/roomItem.scss
@@ -3,7 +3,7 @@
   border: 1px solid $grey-400;
   border-radius: 2px;
   padding: 0.8em 1em;
-  padding-left: 1.2em;
+  padding-left: 1.1em;
   margin-bottom: 0.6em;
   position: relative;
   &:hover, &.selected {
@@ -15,7 +15,7 @@
     left: 0;
     top: 0;
     bottom: 0;
-    width: 0.5em;
+    width: 0.4em;
     background: $green-600;
     border-radius: 1px 0 0 1px;
   }
